# docker-manager

./: README.md  pyproject.toml  setup.py
.conda/: conda_build_config.yaml  meta.yaml
.github/workflows/: publish_conda.yml
docker_manager/: __init__.py  docker_manager.py  docker_settings.py
